--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <!-- header section starts -->
+    <header class="header">
+        <a href="#" class="brand">Shaikh.</a>
+        <input type="checkbox" id="nav-input">
+        <nav class="navbar">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Service</a>
+            <a href="#">Experience</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Contact</a>
+        </nav>
+        <label for="nav-input" class="nav-btn">
+            <i class="fas fa-bars"></i>
+        </label>
+    </header>
+    <!-- header section ends -->
 </body>
 </html>
