Home Page Section Added

--- a/index.html
+++ b/index.html
@@ -26,5 +26,14 @@
         </label>
     </header>
     <!-- header section ends -->
+    <!-- home section starts -->
+    <section class="home">
+        <div class="container">
+            <h4>Hello...</h4>
+            <h1>I Am A <span>Front-End Developer</span></h1>
+            <a href="#" class="btn">About Me</a>
+        </div>
+    </section>
+    <!-- home section ends -->
 </body>
 </html>
