About Me Section Added

--- a/index.html
+++ b/index.html
@@ -35,5 +35,56 @@
         </div>
     </section>
     <!-- home section ends -->
+    <!-- about me section starts -->
+    <section class="about-me">
+        <div class="container">
+            <h2 class="heading">About Me</h2>
+            <div class="row">
+                <img src="img/pic.png" alt="about img" class="about-img">
+                <div class="about-text">
+                    <h3 class="about-name">My Name Is Shaikh Anas</h3>
+                    <p class="about-desc">Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Inventore Tempore, Maiores Quisquam Labore Eligendi Doloribus Ea Enim Suscipit Modi Ducimus.</p>
+                    <h3 class="about-my-skills">My Skills</h3>
+                    <div class="skill">
+                        <div class="skill-info">
+                            <h4 class="skill-name">Html</h4>
+                            <span class="skill-per">95%</span>
+                        </div>
+                        <div class="skill-progress">
+                            <span class="progress-bar per-95"></span>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill-info">
+                            <h4 class="skill-name">Css</h4>
+                            <span class="skill-per">85%</span>
+                        </div>
+                        <div class="skill-progress">
+                            <span class="progress-bar per-85"></span>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill-info">
+                            <h4 class="skill-name">Javascript</h4>
+                            <span class="skill-per">65%</span>
+                        </div>
+                        <div class="skill-progress">
+                            <span class="progress-bar per-65"></span>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill-info">
+                            <h4 class="skill-name">Photoshop</h4>
+                            <span class="skill-per">75%</span>
+                        </div>
+                        <div class="skill-progress">
+                            <span class="progress-bar per-75"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- about me section ends -->
 </body>
 </html>
