My Services Section Added

--- a/index.html
+++ b/index.html
@@ -86,5 +86,38 @@
         </div>
     </section>
     <!-- about me section ends -->
+    <!-- my services section added -->
+    <section class="my-services">
+        <div class="container">
+            <h2 class="heading">My Services</h2>
+            <div class="grid">
+                <a href="#" class="service">
+                    <i class="service-icon fas fa-code"></i>
+                    <h3 class="service-name">Front-End</h3>
+                </a>
+                <a href="#" class="service">
+                    <i class="service-icon fas fa-tools"></i>
+                    <h3 class="service-name">Developer</h3>
+                </a>
+                <a href="#" class="service">
+                    <i class="service-icon fab fa-wordpress-simple"></i>
+                    <h3 class="service-name">Wordpress</h3>
+                </a>
+                <a href="#" class="service">
+                    <i class="service-icon fas fa-pencil-ruler"></i>
+                    <h3 class="service-name">Graphic</h3>
+                </a>
+                <a href="#" class="service">
+                    <i class="service-icon fas fa-marker"></i>
+                    <h3 class="service-name">Seo Marketing</h3>
+                </a>
+                <a href="#" class="service">
+                    <i class="service-icon fas fa-rss"></i>
+                    <h3 class="service-name">Free Lancing</h3>
+                </a>
+            </div>
+        </div>
+    </section>
+    <!-- my services section ends -->
 </body>
 </html>
