My Experience Section Added

--- a/index.html
+++ b/index.html
@@ -119,5 +119,38 @@
         </div>
     </section>
     <!-- my services section ends -->
+    <!-- my experience section starts -->
+    <div class="my-experience">
+        <div class="container">
+            <h2 class="heading">My Experience</h2>
+            <div class="row">
+                <div class="col">
+                    <div class="experience">
+                        <span class="experience-year">2015 - 2016</span>
+                        <h3 class="experience-type">web design/development</h3>
+                        <p class="experience-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa provident debitis nesciunt, dolor id eos non dicta voluptatum hic nemo.</p>
+                    </div>
+                    <div class="experience">
+                        <span class="experience-year">2016 - 2017</span>
+                        <h3 class="experience-type">graphic design</h3>
+                        <p class="experience-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa provident debitis nesciunt, dolor id eos non dicta voluptatum hic nemo.</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="experience">
+                        <span class="experience-year">2017 - 2018</span>
+                        <h3 class="experience-type">seo marketing</h3>
+                        <p class="experience-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa provident debitis nesciunt, dolor id eos non dicta voluptatum hic nemo.</p>
+                    </div>
+                    <div class="experience">
+                        <span class="experience-year">2018 - 2019</span>
+                        <h3 class="experience-type">front-end developer</h3>
+                        <p class="experience-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa provident debitis nesciunt, dolor id eos non dicta voluptatum hic nemo.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- my experience section ends -->
 </body>
 </html>
