Conter Section Added

--- a/index.html
+++ b/index.html
@@ -152,5 +152,29 @@
         </div>
     </div>
     <!-- my experience section ends -->
+    <!-- counter section starts -->
+    <section class="counter">
+        <div class="container">
+            <div class="counter-box">
+                <div class="count">
+                    <span class="number">1400+</span>
+                    <h4 class="number-of">Clients</h4>
+                </div>
+                <div class="count">
+                    <span class="number">1030+</span>
+                    <h4 class="number-of">Projects</h4>
+                </div>
+                <div class="count">
+                    <span class="number">120+</span>
+                    <h4 class="number-of">Awards</h4>
+                </div>
+                <div class="count">
+                    <span class="number">1020+</span>
+                    <h4 class="number-of">Working Hours</h4>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- counter section ends -->
 </body>
 </html>
