Portfolio Section Added

--- a/index.html
+++ b/index.html
@@ -176,5 +176,42 @@
         </div>
     </section>
     <!-- counter section ends -->
+    <!-- portfolio section starts -->
+    <section class="portfolio">
+        <div class="container">
+            <h2 class="heading">Portfolio</h2>
+            <input type="radio" name="samename" id="cntrl-1" checked>
+            <input type="radio" name="samename" id="cntrl-2">
+            <input type="radio" name="samename" id="cntrl-3">
+            <input type="radio" name="samename" id="cntrl-4">
+            <div class="gallery-controls">
+                <label for="cntrl-1" class="btn">All</label>
+                <label for="cntrl-2" class="btn">Design</label>
+                <label for="cntrl-3" class="btn">Graphic</label>
+                <label for="cntrl-4" class="btn">Code</label>
+            </div>
+            <div class="gallery-container">
+                <img src="img/desing1.jpg" alt=".." class="gallery-img"
+                data-value="desing">
+                <img src="img/graphic1.jpg" alt=".." class="gallery-img"
+                data-value="graphic">
+                <img src="img/code1.jpg" alt=".." class="gallery-img"
+                data-value="code">
+                <img src="img/desing2.jpg" alt=".." class="gallery-img"
+                data-value="desing">
+                <img src="img/graphic2.jpg" alt=".." class="gallery-img"
+                data-value="graphic">
+                <img src="img/code2.jpg" alt=".." class="gallery-img"
+                data-value="code">
+                <img src="img/desing3.jpg" alt=".." class="gallery-img"
+                data-value="desing">
+                <img src="img/graphic3.jpg" alt=".." class="gallery-img"
+                data-value="graphic">
+                <img src="img/code3.jpg" alt=".." class="gallery-img"
+                data-value="code">
+            </div>
+        </div>
+    </section>
+    <!-- portfolio section ends -->
 </body>
 </html>
