--- a/index.html
+++ b/index.html
@@ -213,5 +213,48 @@
         </div>
     </section>
     <!-- portfolio section ends -->
+    <!-- contact section starts -->
+    <section class="contact">
+        <div class="container">
+            <h2 class="heading">Contact Me</h2>
+            <div class="contact-row">
+                <div class="contact-info">
+                    <div class="info-box">
+                        <h3>
+                            <i class="fas fa-map-marker-alt"></i>
+                            Address
+                        </h3>
+                        <p>Mumbai,<br>
+                        Maharashtra,<br>
+                        India - 400104.</p>
+                    </div>
+                    <div class="info-box">
+                        <h3>
+                            <i class="fas fa-envelope"></i>
+                            E-Mail
+                        </h3>
+                        <p>Xyz@Gmail.Com</p>
+                    </div>
+                    <div class="info-box">
+                        <h3>
+                            <i class="fas fa-phone"></i>
+                            Phonne
+                        </h3>
+                        <p>+91000000</p>
+                    </div>
+                </div>
+                <form class="contact-form">
+                    <div class="input-box">
+                        <input type="text" placeholder="first name">
+                        <input type="text" placeholder="last name">
+                    </div>
+                    <input type="email" placeholder="E-Mail">
+                    <textarea placeholder="Message"></textarea>
+                    <a href="#" class="btn">Send</a>
+                </form>
+            </div>
+        </div>
+    </section>
+    <!-- contact section ends -->
 </body>
 </html>
