Footer 'Credit' Section Added

--- a/index.html
+++ b/index.html
@@ -256,5 +256,12 @@
         </div>
     </section>
     <!-- contact section ends -->
+    <!-- footer section starts -->
+    <footer class="credit">
+        <div class="container">
+            <p>© Copyright By <span>Mr. Web Designer</span></p>
+        </div>
+    </footer>
+    <!-- footer section ends -->
 </body>
 </html>
