--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <input type="checkbox" id="nav-input">
         <nav class="navbar">
             <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Service</a>
-            <a href="#">Experience</a>
-            <a href="#">Portfolio</a>
-            <a href="#">Contact</a>
+            <a href="#about">About</a>
+            <a href="#services">Services</a>
+            <a href="#experience">Experience</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#contact">Contact</a>
         </nav>
         <label for="nav-input" class="nav-btn">
             <i class="fas fa-bars"></i>
@@ -36,7 +36,7 @@
     </section>
     <!-- home section ends -->
     <!-- about me section starts -->
-    <section class="about-me">
+    <section class="about-me" id="about">
         <div class="container">
             <h2 class="heading">About Me</h2>
             <div class="row">
@@ -87,7 +87,7 @@
     </section>
     <!-- about me section ends -->
     <!-- my services section added -->
-    <section class="my-services">
+    <section class="my-services" id="services">
         <div class="container">
             <h2 class="heading">My Services</h2>
             <div class="grid">
@@ -120,7 +120,7 @@
     </section>
     <!-- my services section ends -->
     <!-- my experience section starts -->
-    <div class="my-experience">
+    <div class="my-experience" id="experience">
         <div class="container">
             <h2 class="heading">My Experience</h2>
             <div class="row">
@@ -177,7 +177,7 @@
     </section>
     <!-- counter section ends -->
     <!-- portfolio section starts -->
-    <section class="portfolio">
+    <section class="portfolio" id="portfolio">
         <div class="container">
             <h2 class="heading">Portfolio</h2>
             <input type="radio" name="samename" id="cntrl-1" checked>
@@ -214,7 +214,7 @@
     </section>
     <!-- portfolio section ends -->
     <!-- contact section starts -->
-    <section class="contact">
+    <section class="contact" id="contact">
         <div class="container">
             <h2 class="heading">Contact Me</h2>
             <div class="contact-row">
